# mle-core-dpp

./: .appveyor.yml  .gitignore  README.md
DigitalPlayprint/lib/common/doc/: MleDoxyfile
DigitalPlayprint/lib/common/include/mle/: Dpp.h  DppActor.h  DppActorGroupOutput.h  DppActorSet.h  DppArray.h  DppDatatype.h  DppEnum.h  DppFloat.h  DppFloat3.h  DppFloat4.h  DppFloatArray.h  DppGroup.h  DppGroupRef.h  DppInt.h  DppIntArray.h  DppItem.h  DppMatrix34.h  DppProperty.h  DppRoleAttachment.h  DppRoleBinding.h  DppRotation.h  DppScalar.h  DppScalarArray.h  DppScene.h  DppSceneOutput.h  DppSet.h  DppString.h  DppTblMgr.h  DppTransform.h  DppType.h  DppVector2.h  DppVector3.h  DppVector3Array.h  DppVector4.h  DppVoidStarType.h  agopcode.h
DigitalPlayprint/lib/common/src/DPP/: Dpp.cpp  DppGenCode.cpp
DigitalPlayprint/lib/common/src/DPPBase/: DppActorGroupOutput.cpp  DppItem.cpp  DppSceneOutput.cpp  DppTblMgr.cpp
DigitalPlayprint/lib/common/src/DPPModel/: DppActor.cpp  DppActorSet.cpp  DppDelegateAttachment.cpp  DppDelegateBinding.cpp  DppForum.cpp  DppGroup.cpp  DppGroupRef.cpp  DppProperty.cpp  DppRoleAttachment.cpp  DppRoleBinding.cpp  DppScene.cpp  DppSet.cpp
DigitalPlayprint/lib/common/src/DPPType/: DppArray.cpp  DppEnum.cpp  DppFloat.cpp  DppFloat3.cpp  DppFloat4.cpp  DppFloatArray.cpp  DppInt.cpp  DppIntArray.cpp  DppMatrix34.cpp  DppRotation.cpp  DppScalar.cpp  DppScalarArray.cpp  DppString.cpp  DppTransform.cpp  DppType.cpp  DppVector2.cpp  DppVector3.cpp  DppVector3Array.cpp  DppVector4.cpp  DppVoidStarType.cpp
DigitalPlayprint/lib/linux/: .autotools  .cproject  .project  CMakeLists.txt  Makefile.am  NEWS  README  configure.ac
DigitalPlayprint/lib/linux/exampleProgram/: Makefile.am  exampleProgram.c
DigitalPlayprint/lib/linux/include/: Makefile.am  libDPP.h
DigitalPlayprint/lib/linux/libDPP/: CMakeLists.txt  Makefile.am  libDPP.c
DigitalPlayprint/lib/qt/DPP/: DPP.pro
DigitalPlayprint/lib/win32/include/: Makefile
DigitalPlayprint/lib/win32/src/: Makefile
DigitalPlayprint/lib/win32/src/DPP/: Makefile  leafdefs
DigitalPlayprint/lib/win32/src/DPPBase/: Makefile  leafdefs
DigitalPlayprint/master/linux/: CMakeLists.txt
DigitalPlayprint/master/linux/dumpdpp/: .autotools  .cproject  .project  NEWS  README  configure.ac
DigitalPlayprint/master/linux/dumpdpp/src/: Makefile.am
DigitalPlayprint/master/linux/dumpgroup/: .autotools  .cproject  .project  NEWS  README  configure.ac
DigitalPlayprint/master/linux/dumpgroup/src/: Makefile.am
DigitalPlayprint/master/linux/dumpmedia/: .autotools  .cproject  .project  COPYING  NEWS  README  configure.ac
DigitalPlayprint/master/linux/dumpmedia/src/: Makefile.am
DigitalPlayprint/master/linux/dumpscene/: .autotools  .cproject  .project  NEWS  README  configure.ac
DigitalPlayprint/master/linux/dumpscene/src/: Makefile.am
DigitalPlayprint/master/linux/gendpp/: .autotools  .cproject  .project  NEWS  README  configure.ac
DigitalPlayprint/master/linux/gendpp/src/: Makefile.am
DigitalPlayprint/master/linux/gengroup/: .autotools  .cproject  .project  NEWS  README  configure.ac
DigitalPlayprint/master/linux/gengroup/src/: Makefile.am
DigitalPlayprint/master/linux/genmakefile/: .autotools  .cproject  .project  NEWS  README  configure.ac
DigitalPlayprint/master/linux/genmakefile/src/: Makefile.am  genmakefile.cpp
DigitalPlayprint/master/linux/genmedia/: .autotools  .cproject  .project  NEWS  README  configure.ac
DigitalPlayprint/master/linux/genmedia/src/: Makefile.am
DigitalPlayprint/master/linux/genppscript/: .autotools  .cproject  .project  NEWS  README  configure.ac
DigitalPlayprint/master/linux/genppscript/src/: Makefile.am
DigitalPlayprint/master/linux/genscene/: .autotools  .cproject  .project  NEWS  README  configure.ac
DigitalPlayprint/master/linux/genscene/src/: Makefile.am
DigitalPlayprint/master/linux/gentables/: .autotools  .cproject  .project  NEWS  README  configure.ac
DigitalPlayprint/master/linux/gentables/src/: Makefile.am
DigitalPlayprint/master/linux/libDPPGen/: .autotools  .cproject  .project  CMakeLists.txt  Makefile.am  NEWS  README  configure.ac
DigitalPlayprint/master/linux/libDPPGen/cmake/: FindDWP.cmake
DigitalPlayprint/master/linux/libDPPGen/exampleProgram/: Makefile.am  exampleProgram.c
DigitalPlayprint/master/linux/libDPPGen/include/: Makefile.am  libDPPGen.h
DigitalPlayprint/master/linux/libDPPGen/libDPPGen/: Makefile.am  libDPPGen.c
DigitalPlayprint/master/qt/DPPGen/: DPPGen.pro
DigitalPlayprint/master/qt/dumpdpp/: dumpdpp.pro
DigitalPlayprint/master/qt/dumpgroup/: dumpgroup.pro
DigitalPlayprint/master/qt/dumpmedia/: dumpmedia.pro
DigitalPlayprint/master/qt/dumpscene/: dumpscene.pro
DigitalPlayprint/master/qt/gendpp/: gendpp.pro
DigitalPlayprint/master/qt/gengroup/: gengroup.pro
DigitalPlayprint/master/qt/genmakefile/: genmakefile.pro
DigitalPlayprint/master/qt/genmedia/: genmedia.pro
DigitalPlayprint/master/qt/genppscript/: genppscript.pro
DigitalPlayprint/master/qt/genscene/: genscene.pro
DigitalPlayprint/master/qt/gentables/: gentables.pro
DigitalPlayprint/master/win32/: Makefile
DigitalPlayprint/master/win32/src/: Makefile
DigitalPlayprint/runtime/DppRuntime/: DppRuntime.dsw
DigitalPlayprint/runtime/brender/: Makefile
DigitalPlayprint/runtime/brender/include/: Makefile
DigitalPlayprint/runtime/brender/src/: Makefile
DigitalPlayprint/runtime/common/src/: agchk.cxx  chkfile.cxx  chktable.cxx  mrefchk.cxx  playprnt.c  pp.cxx  ppinput.cxx  ppoutput.cxx  scenechk.cxx
DigitalPlayprint/runtime/linux/: .autotools  .cproject  .project  CMakeLists.txt  Makefile.am  NEWS  README  configure.ac
DigitalPlayprint/runtime/linux/exampleProgram/: Makefile.am  exampleProgram.c
DigitalPlayprint/runtime/linux/include/: Makefile.am  libplayprint.h
DigitalPlayprint/runtime/linux/libplayprint/: Makefile.am  libplayprint.c
DigitalPlayprint/runtime/qt/playprint/: playprint.pro
DigitalPlayprint/runtime/win32/: ismrules
DigitalPlayprint/runtime/win32/include/: Makefile
DigitalPlayprint/runtime/win32/src/: Makefile
(+153 files in other folders)
