# These files will end up in the install include directory
# For example, /usr/include
includedir = $(prefix)/include/mle

include_HEADERS = \
	$(top_srcdir)/../common/include/mle/agopcode.h \
	$(top_srcdir)/../common/include/mle/Dpp.h \
	$(top_srcdir)/../common/include/mle/DppActorGroupOutput.h \
	$(top_srcdir)/../common/include/mle/DppActor.h \
	$(top_srcdir)/../common/include/mle/DppActorSet.h \
	$(top_srcdir)/../common/include/mle/DppArray.h \
	$(top_srcdir)/../common/include/mle/DppDatatype.h \
	$(top_srcdir)/../common/include/mle/DppEnum.h \
	$(top_srcdir)/../common/include/mle/DppFloat3.h \
	$(top_srcdir)/../common/include/mle/DppFloat4.h \
	$(top_srcdir)/../common/include/mle/DppFloatArray.h \
	$(top_srcdir)/../common/include/mle/DppFloat.h \
	$(top_srcdir)/../common/include/mle/DppGroup.h \
	$(top_srcdir)/../common/include/mle/DppGroupRef.h \
	$(top_srcdir)/../common/include/mle/DppIntArray.h \
	$(top_srcdir)/../common/include/mle/DppInt.h \
	$(top_srcdir)/../common/include/mle/DppItem.h \
	$(top_srcdir)/../common/include/mle/DppMatrix34.h \
	$(top_srcdir)/../common/include/mle/DppProperty.h \
	$(top_srcdir)/../common/include/mle/DppRoleAttachment.h \
	$(top_srcdir)/../common/include/mle/DppRoleBinding.h \
	$(top_srcdir)/../common/include/mle/DppRotation.h \
	$(top_srcdir)/../common/include/mle/DppScalarArray.h \
	$(top_srcdir)/../common/include/mle/DppScalar.h \
	$(top_srcdir)/../common/include/mle/DppScene.h \
	$(top_srcdir)/../common/include/mle/DppSceneOutput.h \
	$(top_srcdir)/../common/include/mle/DppSet.h \
	$(top_srcdir)/../common/include/mle/DppString.h \
	$(top_srcdir)/../common/include/mle/DppTblMgr.h \
	$(top_srcdir)/../common/include/mle/DppTransform.h \
	$(top_srcdir)/../common/include/mle/DppType.h \
	$(top_srcdir)/../common/include/mle/DppVector2.h \
	$(top_srcdir)/../common/include/mle/DppVector3Array.h \
	$(top_srcdir)/../common/include/mle/DppVector3.h \
	$(top_srcdir)/../common/include/mle/DppVector4.h \
	$(top_srcdir)/../common/include/mle/DppVoidStarType.h
	