# These files will end up in the install include directory
# For example, /usr/include
includedir = $(prefix)/include/mle

include_HEADERS = \
	$(top_srcdir)/../common/include/mle/playprnt.h \
	$(top_srcdir)/../common/include/mle/ppinput.h \
	$(top_srcdir)/../common/include/mle/pp.h \
	$(top_srcdir)/../common/include/mle/chunk.h
